[package]
name = "gtars-vrs"
version = "0.7.0"
edition = "2024"
description = "GA4GH VRS (Variation Representation Specification) allele digest computation"
license = "MIT"
repository = "https://github.com/databio/gtars"

[features]
# Filesystem/VCF path (default): pulls refget's filesystem+http subset, the
# BGZF-parallel VCF pipeline, and the mutable `&mut RefgetStore` HGVS entries.
default = ["filesystem"]
filesystem = ["gtars-refget/filesystem", "gtars-refget/http", "dep:crossbeam-channel"]
# WASM/browser path: in-memory refget only. Compiles the readonly HGVS->VRS
# bridge, parser, normalize, models, and the g.-only NoTranscriptProvider.
wasm = []

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
thiserror = { workspace = true }

# Fast digest path (avoid serde per-variant in hot loop)
sha2 = "0.10.7"
base64-url = "2.0.0"
itoa = "1.0"

# Bounded channels for the BGZF-block-parallel reader/worker/collector pipeline.
# Filesystem-only (the VCF pipeline); not compiled for WASM.
crossbeam-channel = { version = "0.5", optional = true }

# Internal dependency. default-features = false keeps the WASM build free of
# filesystem/http; the `filesystem` feature re-enables them.
gtars-refget = { path = "../gtars-refget", version = "0.8.0", default-features = false }

[dev-dependencies]
tempfile = "3.8.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
csv = { workspace = true }
rstest = { workspace = true }
base64-url = "2.0.0"
# Dev-only: needed for synthetic HGVS test harness (test_hgvs_synthetic.rs).
# This creates a dev-dep cycle (reftx with `vrs` feature path-depends on
# gtars-vrs) but Cargo permits it for dev-dependencies.
gtars-reftx = { path = "../gtars-reftx", features = ["vrs"] }
