[package]
name = "gtars-js"
version = "0.7.1"
authors = ["Nathan LeRoy <NLeRoy917@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.93"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
flate2 = { workspace = true }
getrandom = { version = "0.2.16", features = ["js"] }

# our code
gtars-core = { path = "../gtars-core" }
gtars-genomicdist = {path = "../gtars-genomicdist", features = ["bedclassifier"] }
gtars-overlaprs = { path = "../gtars-overlaprs"}
gtars-tokenizers = { path = "../gtars-tokenizers"}
gtars-refget = { path = "../gtars-refget", default-features = false }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
