[package]
name = "gtars-js"
version = "0.9.1"
authors = ["Nathan LeRoy <NLeRoy917@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.93"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
flate2 = { workspace = true }
getrandom = { version = "0.2.16", features = ["js"] }

# our code
gtars-core = { path = "../gtars-core" }
gtars-genomicdist = {path = "../gtars-genomicdist", features = ["bedclassifier"] }
gtars-overlaprs = { path = "../gtars-overlaprs"}
gtars-tokenizers = { path = "../gtars-tokenizers"}
# WASM-safe transcripts core only — NO `filesystem`/`http` (no memmap2/fs/mmap).
gtars-refget = { path = "../gtars-refget", default-features = false, features = ["transcripts"] }
# `wasm` already enables `transcripts` (the WASM-safe core + the TxProvider impl);
# named explicitly so the dependency is self-documenting.
gtars-vrs = { path = "../gtars-vrs", default-features = false, features = ["wasm", "transcripts"] }
gtars-igd = { path = "../gtars-igd" }
gtars-lola = { path = "../gtars-lola" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
# Test-only: decode a sha512t24u digest into the 24 raw bytes a synthetic
# `.reftx` transcript record stores as its `chrom_digest`.
base64-url = { workspace = true }

# NOTE: profile sections in non-root workspace members are silently ignored
# by cargo, so this block has no effect here. Left commented as a marker for
# future work — to actually apply size optimization to the wasm bundle, this
# needs to move to the workspace root Cargo.toml (e.g. as
# `[profile.release.package.gtars-js]` for a per-package override, or as a
# custom `wasm-release` profile inheriting from release).
#
# [profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
